# opentelemetry-sklearn

./: .gitignore  Makefile  README.rst  pyproject.toml
examples/fastapi_server/: server.py  sklearn_model.py
opentelemetry_sklearn/instrumentation/sklearn/: __init__.py
opentelemetry_sklearn/instrumentation/tests/: test_sklearn.py
